--- a/index.html
+++ b/index.html
@@ -75,39 +75,45 @@
                 </p>
             </h4>
             <div class="pricing__wrapper">
-                <ul class="pricing__card">
-                    <li class="pricing__item pricing__item-name">Basic</li>
-                    <li class="pricing__item pricing__item-price">$10</li>
-                    <li class="pricing__item pricing__item-period">Free for life</li>
-                    <li class="pricing__item">1 gb of space</li>
-                    <li class="pricing__item">1 gb of space</li>
-                    <li class="pricing__item">1 gb of space</li>
-                    <li class="pricing__item">1 gb of space</li>
-                    <li class="pricing__item">1 gb of space</li>
-                    <li class="pricing__item">1 gb of space</li>
-                </ul>
-                <ul class="pricing__card">
-                    <li class="pricing__item pricing__item-name">Optima</li>
-                    <li class="pricing__item pricing__item-price">$20</li>
-                    <li class="pricing__item pricing__item-period pricing__item-period_orange">Free for life</li>
-                    <li class="pricing__item">1 gb of space</li>
-                    <li class="pricing__item">1 gb of space</li>
-                    <li class="pricing__item">1 gb of space</li>
-                    <li class="pricing__item">1 gb of space</li>
-                    <li class="pricing__item">1 gb of space</li>
-                    <li class="pricing__item">1 gb of space</li>
-                </ul>
-                <ul class="pricing__card">
-                    <li class="pricing__item pricing__item-name">Pro</li>
-                    <li class="pricing__item pricing__item-price">$30</li>
-                    <li class="pricing__item pricing__item-period">Free for life</li>
-                    <li class="pricing__item">1 gb of space</li>
-                    <li class="pricing__item">1 gb of space</li>
-                    <li class="pricing__item">1 gb of space</li>
-                    <li class="pricing__item">1 gb of space</li>
-                    <li class="pricing__item">1 gb of space</li>
-                    <li class="pricing__item">1 gb of space</li>
-                </ul>
+                <div class="pricing__card">
+                    <ul class="pricing__list">
+                        <li class="pricing__item pricing__item-name">Basic</li>
+                        <li class="pricing__item pricing__item-price">$10</li>
+                        <li class="pricing__item pricing__item-period">Free for life</li>
+                        <li class="pricing__item">1 gb of space</li>
+                        <li class="pricing__item">1 gb of space</li>
+                        <li class="pricing__item">1 gb of space</li>
+                        <li class="pricing__item">1 gb of space</li>
+                        <li class="pricing__item">1 gb of space</li>
+                        <li class="pricing__item">1 gb of space</li>
+                    </ul>
+                </div>
+                <div class="pricing__card">
+                    <ul class="pricing__list">
+                        <li class="pricing__item pricing__item-name">Optima</li>
+                        <li class="pricing__item pricing__item-price">$20</li>
+                        <li class="pricing__item pricing__item-period">Free for life</li>
+                        <li class="pricing__item">1 gb of space</li>
+                        <li class="pricing__item">1 gb of space</li>
+                        <li class="pricing__item">1 gb of space</li>
+                        <li class="pricing__item">1 gb of space</li>
+                        <li class="pricing__item">1 gb of space</li>
+                        <li class="pricing__item">1 gb of space</li>
+                    </ul>
+                </div>
+                <div class="pricing__card">
+                    <ul class="pricing__list">
+                        <li class="pricing__item pricing__item-name">Pro</li>
+                        <li class="pricing__item pricing__item-price">$30</li>
+                        <li class="pricing__item pricing__item-period">Free for life</li>
+                        <li class="pricing__item">1 gb of space</li>
+                        <li class="pricing__item">1 gb of space</li>
+                        <li class="pricing__item">1 gb of space</li>
+                        <li class="pricing__item">1 gb of space</li>
+                        <li class="pricing__item">1 gb of space</li>
+                        <li class="pricing__item">1 gb of space</li>
+                    </ul>
+                </div>
             </div>
         </div>
     </section>
