--- a/index.html
+++ b/index.html
@@ -117,6 +117,93 @@
             </div>
         </div>
     </section>
+    <section class="customers">
+        <div class="container">
+            <h2 class="title">
+                what our customers are saying
+            </h2>
+            <h4 class="decription">
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                </p>
+            </h4>
+        
+            <div class="customers__wrapper">
+                <div class="customers__block">
+                    <div class="customers__feedback">
+                        <p>
+                            Lorem ipsum dolor sit amet, 
+                            consectetur adipisicing elit. Doloribus 
+                            accusamus expedita repellat similique 
+                            odio aspernatur ex, architecto eaque 
+                            quo suscipit.
+                        </p>
+                    </div>
+                    <div class="customers__item">
+                        <div class="customers__photo">
+                            <img class="customers__img" src="./img/customers/customer-photo.jpg" alt="customer-photo">
+                        </div>
+                        <div class="customers__description">
+                            <div class="customers__name">
+                                <span>Jeremy H.</span>
+                            </div>
+                            <div class="customers__profession">
+                                <span>Manager</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="customers__block">
+                    <div class="customers__feedback">
+                        <p>
+                            Lorem ipsum dolor sit amet, 
+                            consectetur adipisicing elit. Doloribus 
+                            accusamus expedita repellat similique 
+                            odio aspernatur ex, architecto eaque 
+                            quo suscipit.
+                        </p>
+                    </div>
+                    <div class="customers__item">
+                        <div class="customers__photo">
+                            <img class="customers__img" src="./img/customers/customer-photo.jpg" alt="customer-photo">
+                        </div>
+                        <div class="customers__description">
+                            <div class="customers__name">
+                                <span>Jeremy H.</span>
+                            </div>
+                            <div class="customers__profession">
+                                <span>Manager</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="customers__block">
+                    <div class="customers__feedback">
+                        <p>
+                            Lorem ipsum dolor sit amet, 
+                            consectetur adipisicing elit. Doloribus 
+                            accusamus expedita repellat similique 
+                            odio aspernatur ex, architecto eaque 
+                            quo suscipit.
+                        </p>
+                    </div>
+                    <div class="customers__item">
+                        <div class="customers__photo">
+                            <img class="customers__img" src="./img/customers/customer-photo.jpg" alt="customer-photo">
+                        </div>
+                        <div class="customers__description">
+                            <div class="customers__name">
+                                <span>Jeremy H.</span>
+                            </div>
+                            <div class="customers__profession">
+                                <span>Manager</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     
 </body>
 </html>
