Added axure  section

--- a/index.html
+++ b/index.html
@@ -204,6 +204,20 @@
             </div>
         </div>
     </section>
-    
+    <section class="axure">
+        <div class="container">
+            <h2 class="title_white">
+                STYLISH AXURE DESIGN
+            </h2>
+            <h4 class="decription decription_white">
+                <p>
+                    Use the sections you need, remove the ones you don't. Create gorgeous prototypes faster than ever!
+                </p>
+            </h4>
+            <div class="axure__download">
+                <a href="#" class="axure__link">Download</a>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
