--- a/index.html
+++ b/index.html
@@ -140,39 +140,17 @@
                         </p>
                     </div>
                     <div class="customers__item">
-                        <div class="customers__photo">
-                            <img class="customers__img" src="./img/customers/customer-photo.jpg" alt="customer-photo">
-                        </div>
-                        <div class="customers__description">
-                            <div class="customers__name">
-                                <span>Jeremy H.</span>
+                        <div class="customers__subitem">
+                            <div class="customers__photo">
+                                <img class="customers__img" src="./img/customers/customer-photo.jpg" alt="customer-photo">
                             </div>
-                            <div class="customers__profession">
-                                <span>Manager</span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="customers__block">
-                    <div class="customers__feedback">
-                        <p>
-                            Lorem ipsum dolor sit amet, 
-                            consectetur adipisicing elit. Doloribus 
-                            accusamus expedita repellat similique 
-                            odio aspernatur ex, architecto eaque 
-                            quo suscipit.
-                        </p>
-                    </div>
-                    <div class="customers__item">
-                        <div class="customers__photo">
-                            <img class="customers__img" src="./img/customers/customer-photo.jpg" alt="customer-photo">
-                        </div>
-                        <div class="customers__description">
-                            <div class="customers__name">
-                                <span>Jeremy H.</span>
-                            </div>
-                            <div class="customers__profession">
-                                <span>Manager</span>
+                            <div class="customers__description">
+                                <div class="customers__name">
+                                    <span>Jeremy H.</span>
+                                </div>
+                                <div class="customers__profession">
+                                    <span>Manager</span>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -188,15 +166,43 @@
                         </p>
                     </div>
                     <div class="customers__item">
-                        <div class="customers__photo">
-                            <img class="customers__img" src="./img/customers/customer-photo.jpg" alt="customer-photo">
-                        </div>
-                        <div class="customers__description">
-                            <div class="customers__name">
-                                <span>Jeremy H.</span>
+                        <div class="customers__subitem">
+                            <div class="customers__photo">
+                                <img class="customers__img" src="./img/customers/customer-photo.jpg" alt="customer-photo">
                             </div>
-                            <div class="customers__profession">
-                                <span>Manager</span>
+                            <div class="customers__description">
+                                <div class="customers__name">
+                                    <span>Jeremy H.</span>
+                                </div>
+                                <div class="customers__profession">
+                                    <span>Manager</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="customers__block">
+                    <div class="customers__feedback">
+                        <p>
+                            Lorem ipsum dolor sit amet, 
+                            consectetur adipisicing elit. Doloribus 
+                            accusamus expedita repellat similique 
+                            odio aspernatur ex, architecto eaque 
+                            quo suscipit.
+                        </p>
+                    </div>
+                    <div class="customers__item">
+                        <div class="customers__subitem">
+                            <div class="customers__photo">
+                                <img class="customers__img" src="./img/customers/customer-photo.jpg" alt="customer-photo">
+                            </div>
+                            <div class="customers__description">
+                                <div class="customers__name">
+                                    <span>Jeremy H.</span>
+                                </div>
+                                <div class="customers__profession">
+                                    <span>Manager</span>
+                                </div>
                             </div>
                         </div>
                     </div>
