Added the header  section

--- a/index.html
+++ b/index.html
@@ -5,12 +5,35 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700;800&family=Raleway:wght@400;700&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
+    <header class="header">
+        <div class="container">
+           <div class="header__wrapper">
+            <h2 class="header__logo">ax<span>it</span></h2>
+            <nav class="header__navigation">
+                <ul class="header__list">
+                    <li class="header__item">
+                        <a href="#" class="header__link">feautures</a>
+                    </li>
+                    <li class="header__item">
+                        <a href="#" class="header__link">About</a>
+                    </li>
+                    <li class="header__item">
+                        <a href="#" class="header__link">Pricing</a>
+                    </li>
+                    <li class="header__item">
+                        <a href="#" class="header__link">Reviews</a>
+                    </li>
+                    <li class="header__item">
+                        <a href="#" class="header__link">Contact</a>
+                    </li>
+                </ul>
+            </nav>
+           </div>
+        </div>
+    </header>
     <section class="awesome">
         <div class="container">
             <h2 class="title">
