--- a/index.html
+++ b/index.html
@@ -87,6 +87,100 @@
             </div>
         </div>
     </section>
+    <section class="social">
+        <div class="container">
+            <div class="social__wrapper">
+                <div class="social__media">
+                    <h2 class="social__title">
+                        Social Media
+                    </h2>
+                    <div class="social__decription">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                        Aenean euismod bibendum laoreet.
+                    </div>
+                </div>
+                <div class="social__icons">
+                    <ul class="social__list">
+                        <li class="social__item">
+                            <a href="#" class="social__link"><i class="fab fa-facebook-f"></i></a>
+                        </li>
+                        <li class="social__item">
+                            <a href="#" class="social__link"><i class="fab fa-twitter"></i></a>
+                        </li>
+                        <li class="social__item">
+                            <a href="#" class="social__link"><i class="fab fa-google-plus-g"></i></a>
+                        </li>
+                        <li class="social__item">
+                            <a href="#" class="social__link"><i class="fab fa-pinterest"></i></a>
+                        </li>
+                        <li class="social__item">
+                            <a href="#" class="social__link"><i class="fab fa-instagram"></i></a>
+                        </li>
+                        <li class="social__item">
+                            <a href="#" class="social__link"><i class="fab fa-telegram-plane"></i></a>
+                        </li>
+                        <li class="social__item">
+                            <a href="#" class="social__link"><i class="fab fa-yahoo"></i></a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
+    
+    <section class="awesome">
+        <div class="container">
+            <h2 class="title">
+                WHY THIS IS AWESOME
+            </h2>
+            <h4 class="decription">
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                </p>
+            </h4>
+            <div class="awesome__wrapper">
+                <div class="awesomr__block">
+                    <div class="awesome__img">
+                        <img src="./img/awesome/lamp.svg" alt="lamp">
+                    </div>
+                    <h2 class="awesome__title">
+                        Thoughtful Design
+                    </h2>
+                    <div class="awesome__descr">
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida  dolor sit amet lacus accumsan et viverra.
+                        </p>
+                    </div>
+                </div>
+                <div class="awesomr__block">
+                    <div class="awesome__img">
+                        <img src="./img/awesome/keyboard.svg" alt="keyboard">
+                    </div>
+                    <h2 class="awesome__title">
+                        Well Crafted
+                    </h2>
+                    <div class="awesome__descr">
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida  dolor sit amet lacus accumsan et viverra.
+                        </p>
+                    </div>
+                </div>
+                <div class="awesomr__block">
+                    <div class="awesome__img">
+                        <img src="./img/awesome/lightning.svg" alt="lightning">
+                    </div>
+                    <h2 class="awesome__title">
+                        Easy to Customize
+                    </h2>
+                    <div class="awesome__descr">
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida  dolor sit amet lacus accumsan et viverra.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <section class="pricing">
         <div class="container">
             <h2 class="title">
