--- a/index.html
+++ b/index.html
@@ -342,5 +342,37 @@
             </div>
         </div>
     </section>
+    <footer class="footer">
+        <div class="footer__wrapper">
+            <di class="footer__block">
+                <ul class="footer__list">
+                    <li class="footer__item">
+                        <a href="#" class="footer__link"><i class="fab fa-facebook-f"></i></a>
+                    </li>
+                    <li class="footer__item">
+                        <a href="#" class="footer__link"><i class="fab fa-twitter"></i></a>
+                    </li>
+                    <li class="footer__item">
+                        <a href="#" class="footer__link"><i class="fab fa-google-plus-g"></i></a>
+                    </li>
+                    <li class="footer__item">
+                        <a href="#" class="footer__link"><i class="fab fa-pinterest"></i></a>
+                    </li>
+                    <li class="footer__item">
+                        <a href="#" class="footer__link"><i class="fab fa-instagram"></i></a>
+                    </li>
+                    <li class="footer__item">
+                        <a href="#" class="footer__link"><i class="fab fa-telegram-plane"></i></a>
+                    </li>
+                    <li class="footer__item">
+                        <a href="#" class="footer__link"><i class="fab fa-yahoo"></i></a>
+                    </li>
+                </ul>
+                <div class="footer__descriptipon">
+                    © 2015 Axure Themes
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
