--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header class="header">
         <div class="container">
            <div class="header__wrapper">
-            <h2 class="header__logo">ax<span>it</span></h2>
+            <a href="#" class="header__logo-link"><h2 class="header__title">ax</h2></a>
             <nav class="header__navigation">
                 <ul class="header__list">
                     <li class="header__item">
@@ -141,7 +141,7 @@
             <div class="awesome__wrapper">
                 <div class="awesomr__block">
                     <div class="awesome__img">
-                        <img src="./img/awesome/lamp.svg" alt="lamp">
+                        <i class="far fa-lightbulb awesome__img-svg"></i>
                     </div>
                     <h2 class="awesome__title">
                         Thoughtful Design
@@ -154,7 +154,7 @@
                 </div>
                 <div class="awesomr__block">
                     <div class="awesome__img">
-                        <img src="./img/awesome/keyboard.svg" alt="keyboard">
+                        <i class="far fa-keyboard awesome__img-svg"></i>
                     </div>
                     <h2 class="awesome__title">
                         Well Crafted
@@ -167,7 +167,7 @@
                 </div>
                 <div class="awesomr__block">
                     <div class="awesome__img">
-                        <img src="./img/awesome/lightning.svg" alt="lightning">
+                        <i class="fas fa-bolt awesome__img-svg"></i>
                     </div>
                     <h2 class="awesome__title">
                         Easy to Customize
@@ -337,8 +337,8 @@
                     Use the sections you need, remove the ones you don't. Create gorgeous prototypes faster than ever!
                 </p>
             </h4>
-            <div class="axure__download">
-                <a href="#" class="axure__link">Download</a>
+            <div class="download axure__download">
+                <a href="#" class="link">Download</a>
             </div>
         </div>
     </section>
