--- a/index.html
+++ b/index.html
@@ -11,20 +11,22 @@
     <header class="header">
         <div class="container">
            <div class="header__wrapper">
-            <a href="#" class="header__logo-link"><h2 class="header__title">ax</h2></a>
+            <a href="#" class="header__logo-link">
+                <span class="header__title">ax</span>
+            </a>
             <nav class="header__navigation">
                 <ul class="header__list">
                     <li class="header__item">
                         <a href="#" class="header__link">feautures</a>
                     </li>
                     <li class="header__item">
-                        <a href="#" class="header__link">About</a>
+                        <a href="#awesome" class="header__link">About</a>
                     </li>
                     <li class="header__item">
-                        <a href="#" class="header__link">Pricing</a>
+                        <a href="#pricing" class="header__link">Pricing</a>
                     </li>
                     <li class="header__item">
-                        <a href="#" class="header__link">Reviews</a>
+                        <a href="#customers" class="header__link">Reviews</a>
                     </li>
                     <li class="header__item">
                         <a href="#" class="header__link">Contact</a>
@@ -34,56 +36,45 @@
            </div>
         </div>
     </header>
-    <section class="awesome">
+    <section class="prime">
         <div class="container">
-            <h2 class="title">
-                WHY THIS IS AWESOME
-            </h2>
-            <h4 class="decription">
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                </p>
-            </h4>
-            <div class="awesome__wrapper">
-                <div class="awesomr__block">
-                    <div class="awesome__img">
-                        <img src="./img/awesome/lamp.svg" alt="lamp">
-                    </div>
-                    <h2 class="awesome__title">
-                        Thoughtful Design
-                    </h2>
-                    <div class="awesome__descr">
+            <div class="prime__wrapper">
+                <div class="prime__block-description">
+                    <a href="#" class="prime__logo-link">
+                        <span class="prime__logo">ax</span>
+                    </a>
+                    <h1 class="title_white prime__title">
+                        MODERN AXURE TEMPLATE FOR BEAUTIFUL PROTOTYPES
+                    </h1>
+                    <h4 class="decription_white prime__description">
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida  dolor sit amet lacus accumsan et viverra.
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean
                         </p>
+                    </h4>
+                    <div class="download prime__download">
+                        <a href="#" class="link">Download</a>
                     </div>
                 </div>
-                <div class="awesomr__block">
-                    <div class="awesome__img">
-                        <img src="./img/awesome/keyboard.svg" alt="keyboard">
+                <form action="" class="prime__form">
+                    <div class="prime__form-content">
+                        <h3 class="prime__form-title">
+                            Try Your <span>FREE</span> Trial Today
+                        </h3>
+                        <div class="prime__form-item">
+                            <label for="name">Name</label>
+                            <input type="text" id="name" name="user_name">
+                        </div>
+                        <div class="prime__form-item">
+                            <label for="mail">Email</label>
+                            <input type="email" id="mail" name="user_email">
+                        </div>
+                        <div class="prime__form-item">
+                            <label for="password">Password</label>
+                            <input type="password" id="password" name="user_password">
+                        </div>
                     </div>
-                    <h2 class="awesome__title">
-                        Well Crafted
-                    </h2>
-                    <div class="awesome__descr">
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida  dolor sit amet lacus accumsan et viverra.
-                        </p>
-                    </div>
-                </div>
-                <div class="awesomr__block">
-                    <div class="awesome__img">
-                        <img src="./img/awesome/lightning.svg" alt="lightning">
-                    </div>
-                    <h2 class="awesome__title">
-                        Easy to Customize
-                    </h2>
-                    <div class="awesome__descr">
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida  dolor sit amet lacus accumsan et viverra.
-                        </p>
-                    </div>
-                </div>
+                    <button class="prime__button">Get Started</button>
+                </form>
             </div>
         </div>
     </section>
@@ -128,7 +119,7 @@
         </div>
     </section>
     
-    <section class="awesome">
+    <section class="awesome" id="awesome">
         <div class="container">
             <h2 class="title">
                 WHY THIS IS AWESOME
@@ -181,7 +172,7 @@
             </div>
         </div>
     </section>
-    <section class="pricing">
+    <section class="pricing" id="pricing">
         <div class="container">
             <h2 class="title">
                 pricing options
@@ -234,7 +225,7 @@
             </div>
         </div>
     </section>
-    <section class="customers">
+    <section class="customers" id="customers">
         <div class="container">
             <h2 class="title">
                 what our customers are saying
@@ -374,5 +365,6 @@
             </div>
         </div>
     </footer>
+    <script src="./js/script.js"></script>
 </body>
 </html>
