added the required in inputs

--- a/index.html
+++ b/index.html
@@ -62,15 +62,15 @@
                         </h3>
                         <div class="prime__form-item">
                             <label class="label" for="name">Name</label>
-                            <input type="text" id="name" name="user_name">
+                            <input type="text" id="name" name="user_name" required>
                         </div>
                         <div class="prime__form-item">
                             <label class="label" for="mail">Email</label>
-                            <input type="email" id="mail" name="user_email">
+                            <input type="email" id="mail" name="user_email" required>
                         </div>
                         <div class="prime__form-item">
                             <label class="label" for="password">Password</label>
-                            <input type="password" id="password" name="user_password">
+                            <input type="password" id="password" name="user_password" required>
                         </div>
                     </div>
                     <button class="button prime__button">Get Started</button>
@@ -348,20 +348,20 @@
                     <div class="contact__form-block">
                         <div class="contact__form-item">
                             <label class="label" for="name_contact">Name</label>
-                            <input type="text" id="name_contact" name="user_name">
+                            <input type="text" id="name_contact" name="user_name" required>
                         </div>
                         <div class="contact__form-item">
                             <label class="label" for="mail_contact">Email</label>
-                            <input type="email" id="mail_contact" name="user_email">
+                            <input type="email" id="mail_contact" name="user_email" required>
                         </div>
                         <div class="contact__form-item">
                             <label class="label" for="password_conatct">Password</label>
-                            <input type="password" id="password_conatct" name="user_password">
+                            <input type="password" id="password_conatct" name="user_password" required>
                         </div>
                     </div>
                     <div class="contact__form-block">
                         <label class="label" for="textarea">Message</label>
-                        <textarea name="textarea" id="textarea" cols="" rows=""></textarea>
+                        <textarea name="textarea" id="textarea" cols="" rows="" required></textarea>
                     </div>
                 </div>
                 <button class="button">Send Message</button>
