Added the section feautures

--- a/index.html
+++ b/index.html
@@ -121,6 +121,44 @@
             </div>
         </div>
     </section>
+    <section class="feautures">
+        <div class="container">
+            <div class="feautures__wrapper">
+                <div class="feautures__tabs">
+                    <div class="feautures__tab active">TAB 1</div>
+                    <div class="feautures__tab">TAB 2</div>
+                    <div class="feautures__tab">TAB 3</div>
+                </div>
+                <div class="feautures__content">
+                    <div class="feautures__description">
+                        <h2 class="feautures__title">
+                            Tabs with soft transitioning effect.
+                        </h2>
+                        <p class="feautures__text">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod 
+                        </p>
+                        <p class="feautures__text"> 
+                            bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra 
+                        </p>
+                        <p class="feautures__text"> 
+                            justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque 
+                            penatibus et magnis dis parturient montes.
+                        </p>
+                        <p class="feautures__text">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod 
+                        </p>
+                        <p class="feautures__text"> 
+                            bibendum laoreet.
+                        </p>
+                        <button class="button feautures__button">Download</button>
+                    </div>
+                    <div class="feautures__img">
+                        <img src="./img/feautures/statue.jpg" alt="statue">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <section class="awesome" id="awesome">
         <div class="container">
             <h2 class="title">
