Changed size in the section CONTACT

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             <a href="#" class="header__logo-link">
                 <span class="header__title">ax</span>
             </a>
-            <nav class="header__navigation">
-                <ul class="header__list">
+            <nav class="header__navigation ">
+                <ul class="header__list header__list-active">
                     <li class="header__item">
                         <a href="#" class="header__link">feautures</a>
                     </li>
