Added script.js and hamburger

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
                 <span class="header__title">ax</span>
             </a>
             <nav class="header__navigation ">
-                <ul class="header__list header__list-active">
+                <ul class="header__list">
                     <li class="header__item">
-                        <a href="#" class="header__link">feautures</a>
+                        <a href="#feautures" class="header__link">feautures</a>
                     </li>
                     <li class="header__item">
                         <a href="#awesome" class="header__link">About</a>
@@ -126,7 +126,7 @@
             </div>
         </div>
     </section>
-    <section class="feautures">
+    <section class="feautures" id="feautures">
         <div class="container">
             <div class="feautures__wrapper">
                 <div class="feautures__tabs">
