--- a/index.html
+++ b/index.html
@@ -130,11 +130,11 @@
         <div class="container">
             <div class="feautures__wrapper">
                 <div class="feautures__tabs">
-                    <div class="feautures__tab active">TAB 1</div>
-                    <div class="feautures__tab">TAB 2</div>
-                    <div class="feautures__tab">TAB 3</div>
+                    <div class="feautures__tab active" data-tab-name="tab-1">TAB 1</div>
+                    <div class="feautures__tab" data-tab-name="tab-2">TAB 2</div>
+                    <div class="feautures__tab" data-tab-name="tab-3">TAB 3</div>
                 </div>
-                <div class="feautures__content">
+                <div class="feautures__content tab-1 active">
                     <div class="feautures__description">
                         <h2 class="feautures__title">
                             Tabs with soft transitioning effect.
@@ -158,7 +158,60 @@
                         <button class="button feautures__button">Download</button>
                     </div>
                     <div class="feautures__img">
-                        <img src="./img/feautures/statue.jpg" alt="statue">
+                        <img src="./img/feautures/mountain.jpg" alt="mountain">
+                    </div>
+                </div>
+                <div class="feautures__content tab-2">
+                    <div class="feautures__description">
+                        <h2 class="feautures__title">
+                            Tabs with soft effect.
+                        </h2>
+                        <p class="feautures__text">
+                            <span class="feautures__text-span">Possimus, ut iste! Reiciendis porro minima quia quisquam!</span>
+                            <span class="feautures__text-span">
+                                Esse suscipit cupiditate enim recusandae expedita iure id error quaerat dolorum
+                            </span>
+                            <span class="feautures__text-span">
+                                voluptatem reiciendis impedit eos commodi, atque repudiandae voluptatibus quas aspernatur doloremque distinctio sunt
+                            </span> 
+                            <span class="feautures__text-span">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod
+                            </span> 
+                            <span class="feautures__text-span">
+                                tempora aperiam hic itaque quos.
+                            </span> 
+                        </p>
+                        <button class="button feautures__button">Download</button>
+                    </div>
+                    <div class="feautures__img">
+                        <img src="./img/feautures/road.jpg" alt="road">
+                    </div>
+                </div>
+                <div class="feautures__content tab-3">
+                    <div class="feautures__description">
+                        <h2 class="feautures__title">
+                            Tabs soft transitioning effect.
+                        </h2>
+                        <p class="feautures__text">
+                            <span class="feautures__text-span">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod</span>
+                            <span class="feautures__text-span">
+                                bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra
+                            </span>
+                            <span class="feautures__text-span">
+                                justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque 
+                                penatibus et magnis dis parturient montes.
+                            </span> 
+                            <span class="feautures__text-span">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod
+                            </span> 
+                            <span class="feautures__text-span">
+                                bibendum laoreet.
+                            </span> 
+                        </p>
+                        <button class="button feautures__button">Download</button>
+                    </div>
+                    <div class="feautures__img">
+                        <img src="./img/feautures/desert.jpg" alt="desert">
                     </div>
                 </div>
             </div>
