Changed script tabs

--- a/index.html
+++ b/index.html
@@ -130,11 +130,11 @@
         <div class="container">
             <div class="feautures__wrapper">
                 <div class="feautures__tabs">
-                    <div class="feautures__tab active" data-tab-name="tab-1">TAB 1</div>
-                    <div class="feautures__tab" data-tab-name="tab-2">TAB 2</div>
-                    <div class="feautures__tab" data-tab-name="tab-3">TAB 3</div>
+                    <div class="feautures__tab" data-tab="#tab-1">TAB 1</div>
+                    <div class="feautures__tab" data-tab="#tab-2">TAB 2</div>
+                    <div class="feautures__tab" data-tab="#tab-3">TAB 3</div>
                 </div>
-                <div class="feautures__content tab-1 active">
+                <div class="feautures__content" id="tab-1">
                     <div class="feautures__description">
                         <h2 class="feautures__title">
                             Tabs with soft transitioning effect.
@@ -158,10 +158,10 @@
                         <button class="button feautures__button">Download</button>
                     </div>
                     <div class="feautures__img">
-                        <img src="./img/feautures/mountain.jpg" alt="mountain">
+                        <img src="https://picsum.photos/455/574/" alt="mountain">
                     </div>
                 </div>
-                <div class="feautures__content tab-2">
+                <div class="feautures__content" id="tab-2">
                     <div class="feautures__description">
                         <h2 class="feautures__title">
                             Tabs with soft effect.
@@ -184,10 +184,10 @@
                         <button class="button feautures__button">Download</button>
                     </div>
                     <div class="feautures__img">
-                        <img src="./img/feautures/road.jpg" alt="road">
+                        <img src="https://picsum.photos/455/575/" alt="road">
                     </div>
                 </div>
-                <div class="feautures__content tab-3">
+                <div class="feautures__content " id="tab-3">
                     <div class="feautures__description">
                         <h2 class="feautures__title">
                             Tabs soft transitioning effect.
@@ -211,7 +211,7 @@
                         <button class="button feautures__button">Download</button>
                     </div>
                     <div class="feautures__img">
-                        <img src="./img/feautures/desert.jpg" alt="desert">
+                        <img src="https://picsum.photos/455/573/" alt="desert">
                     </div>
                 </div>
             </div>
